--- a/Assn3_Hitesh_21_24_18.ipynb
+++ b/Assn3_Hitesh_21_24_18.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Assn3_Hitesh_21-24-18.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOiupM+kokKSpNOmSYhtPDb",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +18,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Hiteshprp/Hitesh_21-24-18/blob/main/Assn3_Hitesh_21_24_18.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -53,7 +65,7 @@
         "id": "hOaSRF6Hrw7b",
         "outputId": "9f77af00-bb03-4f64-f508-13736b195c02"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -99,7 +111,7 @@
         "id": "P-BoWmXZw_j_",
         "outputId": "9921a008-2982-4772-8862-8201e5c81422"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -374,7 +386,7 @@
         "id": "KezZ34N80kAm",
         "outputId": "ac9c6bb5-8779-4baf-c8c7-274d58745a86"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -678,7 +690,7 @@
         "id": "2RWa6PKl3A99",
         "outputId": "78090b40-69a4-4adb-8353-3df161260738"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -917,7 +929,7 @@
         "id": "BlOXmrXL4hG4",
         "outputId": "d1a74004-6099-423a-dd7a-91624524acd9"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1138,7 +1150,7 @@
         "id": "uPgWehsrBEcy",
         "outputId": "4b125be8-3638-4320-c273-200a29f39fb8"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1349,7 +1361,7 @@
         "id": "d0ZRT8Sr8DZs",
         "outputId": "e6ca9a63-9bea-4472-ba3b-a6952663bd20"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1556,7 +1568,7 @@
         "id": "UrcRnikJcxUw",
         "outputId": "537f1e38-9190-44b9-f9c8-17c0fd9ec224"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1590,7 +1602,7 @@
         "id": "jOZk0JOldZ2j",
         "outputId": "784c09ab-8f47-439f-dee0-1c581a316262"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1813,7 +1825,7 @@
         "id": "Ej_ml6DbeILp",
         "outputId": "85285e7f-5f1d-4268-b88a-b78ee1cb88d5"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1983,7 +1995,7 @@
         "id": "_slFvPb_fp6t",
         "outputId": "c0fbea21-03d5-4b46-8e1a-934244d206c4"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2025,7 +2037,7 @@
         "id": "QKleQSWwgdhx",
         "outputId": "5299d521-8683-4c8f-e25e-7a4bf58451b6"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2193,7 +2205,7 @@
         "id": "_cRKT1S5inm5",
         "outputId": "bac27b3d-585e-4016-e648-d3e076d5e371"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
